--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Countdowns to some deadlines
 author: Carolin Brandt
 
 domain: "carolin-brandt.de"
-baseurl: "deadlines"
+baseurl: ""
 
 # twitter_hashtag: machinelearning
 github_username: lacinoire
