other way of base url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Caro Tracking Some Deadlines
 description: Countdowns to some deadlines
 author: Carolin Brandt
 
-domain: "carolin-brandt.de"
+domain: "carolin-brandt.de/deadlines"
 baseurl: ""
 
 # twitter_hashtag: machinelearning
