--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Caro Tracking Some Deadlines
 description: Countdowns to some deadlines
 author: Carolin Brandt
 
-domain: "carolin-brandt.de/deadlines"
-baseurl: "carolin-brandt.de/deadlines"
+domain: "carolin-brandt.de"
+baseurl: "/deadlines"
 
 # twitter_hashtag: machinelearning
 github_username: lacinoire
