--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -69,7 +69,7 @@
   date: Mon 15 - Tue 16 Apr 2024
   start: 2024-04-15
   end: 2024-04-16
-  sub: Test
+  sub: TEST
 
 - title: ISSTA 1st Round
   year: 2024
@@ -81,7 +81,7 @@
   date: Mon 16 - Fri 20 September 2024
   start: 2024-09-16
   end: 2024-09-20
-  sub: Test
+  sub: TEST
   note: co-located with ECOOP
 
 - title: ISSTA 2nd Round
@@ -94,7 +94,7 @@
   date: Mon 16 - Fri 20 September 2024
   start: 2024-09-16
   end: 2024-09-20
-  sub: Test
+  sub: TEST
   note: co-located with ECOOP
 
 - title: Requirements Engineering
